--- a/package.json
+++ b/package.json
@@ -38,15 +38,18 @@
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^1.41.3",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.19",
     "fast-xml-parser": "^5.2.5",
     "graphql": "^16.11.0",
     "graphql-upload-ts": "^2.1.2",
     "js2xmlparser": "^5.0.0",
+    "jspdf": "^3.0.4",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.6",
@@ -55,6 +58,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1",
+    "stripe": "^19.3.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -65,7 +69,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.5",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
