--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/schedule": "^6.0.0",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@prisma/client": "5.14.0",
+    "@sendinblue/client": "^3.3.1",
     "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.11.0",
